# mini_ackermann

./: README.md
src/car_basics/: CMakeLists.txt
src/car_basics/include/: wheeltec_robot.h
src/car_basics/launch/: base_serial.launch  mini_akm_basic.launch
src/car_basics/src/: wheeltec_robot.cpp
src/car_localization/: CMakeLists.txt
src/car_localization/configuration_files/: mini_akm.lua
src/car_localization/launch/: cartographer_slam.launch
src/car_manager/: CMakeLists.txt  package.xml
src/car_pathplan/: CMakeLists.txt  package.xml
src/car_pathplan/include/hybrid_a_star_module/: hybrid_astar.h  hybrid_astar_2.h
src/car_pathplan/include/hybrid_a_star_module/Reeds_Shepp_curve/: reedsshepp.h
src/car_pathplan/include/map_fusion/: class_inflation_samples.h  class_map_fusion.h
src/car_pathplan/include/planner/: class_path_planner.h
src/car_pathplan/src/: map_fusion_node.cpp
src/car_perception/: CMakeLists.txt  package.xml
src/rviz_configs/: visul.rviz
